<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00"
        android:id="@+id/cronometro"
        android:layout_marginBottom="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="82sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:layout_below="@+id/cronometro"
        android:layout_centerHorizontal="true"
        android:onClick="onClickStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stop"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        android:onClick="onClickStop" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="10dp"
        android:id="@+id/reset"
        android:layout_below="@+id/stop"
        android:layout_centerHorizontal="true"
        android:onClick="onClickReset" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teste de layout"
        android:layout_marginTop="10dp"
        android:id="@+id/testeLayout"
        android:layout_below="@+id/reset"
        android:layout_centerHorizontal="true"
        android:onClick="linkTesteLayout" />


</RelativeLayout>
